Add a link to comeback to home from subjects component

--- a/front/src/app/pages/subjects/subjects.component.html
+++ b/front/src/app/pages/subjects/subjects.component.html
@@ -15,3 +15,6 @@
 <div *ngIf="errorMessage" class="error-message">
   {{ errorMessage }}
 </div>
+
+<!-- Ajoute le lien vers le HomeComponent -->
+<a routerLink="/">Revenir vers le Home</a>
