front: implement subject creation feature

--- a/front/src/app/pages/subjects/subjects.component.html
+++ b/front/src/app/pages/subjects/subjects.component.html
@@ -16,5 +16,9 @@
   {{ errorMessage }}
 </div>
 
+<div>
+  <button (click)="onAddNewSubject()">Créer un nouveau thème</button>
+</div>
+
 <!-- Ajoute le lien vers le HomeComponent -->
 <a routerLink="/">Revenir vers le Home</a>
