Add feature: subject detail along with unit tests

--- a/front/src/app/pages/subjects/subjects.component.html
+++ b/front/src/app/pages/subjects/subjects.component.html
@@ -1,9 +1,10 @@
-<!-- subject.component.html -->
 <div *ngIf="subjects; else loadingTemplate">
   <h2>Subjects</h2>
   <ul>
     <li *ngFor="let subject of subjects" class="subject-item">
       {{ subject.name }}
+      <button (click)="onSubjectDetail(subject.id)">Detail</button>
+      <!-- Add the Detail button -->
     </li>
   </ul>
 </div>
