--- a/front/src/app/pages/subjects/subjects.component.html
+++ b/front/src/app/pages/subjects/subjects.component.html
@@ -31,7 +31,7 @@
 </div>
 
 <div>
-  <button (click)="onAddNewSubject()">Créer un nouveau thème</button>
+  <button (click)="onAddSubjectForm()">Créer un nouveau thème</button>
 </div>
 
 <!-- Ajoute le lien vers le HomeComponent -->
