front: use SubjectFormComponent for implementation of subject update.
This commit includes new unit test cases for the new methods.

--- a/front/src/app/pages/subjectform/subjectform.component.html
+++ b/front/src/app/pages/subjectform/subjectform.component.html
@@ -17,5 +17,9 @@
   </form>
 </div>
 
+<div *ngIf="message">
+  {{ message }}
+</div>
+
 <!-- Ajoute le lien vers le HomeComponent -->
 <a routerLink="/subjects">Revenir</a>
