--- a/front/src/app/pages/subjectform/subjectform.component.html
+++ b/front/src/app/pages/subjectform/subjectform.component.html
@@ -2,7 +2,7 @@
   <h2>Nouveau thème</h2>
   <form [formGroup]="subjectForm">
     <div>
-      <label for="name">Nom</label>
+      <label for="name">Nom *</label>
       <input type="text" id="name" formControlName="name" />
     </div>
     <div>
@@ -11,7 +11,7 @@
         (click)="onSubmitForm()"
         [disabled]="subjectForm.invalid"
       >
-        Créer !
+        {{ isEdit ? "Modifier !" : "Créer !" }}
       </button>
     </div>
   </form>
