--- a/front/src/app/pages/subjectform/subjectform.component.html
+++ b/front/src/app/pages/subjectform/subjectform.component.html
@@ -3,7 +3,7 @@
   <form [formGroup]="subjectForm">
     <div>
       <label for="name">Nom *</label>
-      <input type="text" id="name" formControlName="name" />
+      <input type="text" id="name" formControlName="name" #nameInput />
     </div>
     <div>
       <button
