front: cleaning and unsubscription for subject-detail and subjectform

--- a/front/src/app/pages/subjectform/subjectform.component.html
+++ b/front/src/app/pages/subjectform/subjectform.component.html
@@ -21,5 +21,9 @@
   {{ message }}
 </div>
 
+<div *ngIf="errorMessage" class="error-message">
+  {{ errorMessage }}
+</div>
+
 <!-- Ajoute le lien vers le HomeComponent -->
 <a routerLink="/subjects">Revenir</a>
