--- a/front/src/app/auth/components/login/login.component.html
+++ b/front/src/app/auth/components/login/login.component.html
@@ -1,1 +1,14 @@
-<p>login works!</p>
+<div>
+  <h2>Connexion</h2>
+  <div>
+    <label for="email">Email</label>
+    <input type="email" id="email" />
+  </div>
+  <div>
+    <label for="password">Mot de pass</label>
+    <input type="password" id="password" />
+  </div>
+  <div>
+    <button type="submit" (click)="onLogin()">Connexion</button>
+  </div>
+</div>
