front: Create mdd module and implement lasy loading

--- a/front/src/app/mdd/components/subjectform/subjectform.component.html
+++ b/front/src/app/mdd/components/subjectform/subjectform.component.html
@@ -26,4 +26,4 @@
 </div>
 
 <!-- Ajoute le lien vers le HomeComponent -->
-<a routerLink="/subjects">Revenir</a>
+<a routerLink="/mdd/subjects">Revenir</a>
