--- a/front/src/app/pages/home/home.component.html
+++ b/front/src/app/pages/home/home.component.html
@@ -1,7 +1,14 @@
 <div class="center">
   <img src="/assets/logo_p6.png" alt="logo" />
   <h1>Welcome to MDD</h1>
-  <button mat-raised-button color="primary" (click)="onDisplaySubjects()">
-    Afficher les subjects
-  </button>
+  <p>
+    <button mat-raised-button color="primary" (click)="onDisplayLogin()">
+      Afficher la page de login
+    </button>
+  </p>
+  <p>
+    <button mat-raised-button color="primary" (click)="onDisplaySubjects()">
+      Afficher les subjects
+    </button>
+  </p>
 </div>
