front: integrate the log into the header

--- a/front/src/app/core/components/header/header.component.html
+++ b/front/src/app/core/components/header/header.component.html
@@ -1,1 +1,5 @@
-<p>header works!</p>
+<mat-toolbar>
+  <a routerLink="/">
+    <img src="assets/logo_p6.png" alt="Logo" class="logo-image" />
+  </a>
+</mat-toolbar>
