--- a/front/src/app/pages/home/home.component.html
+++ b/front/src/app/pages/home/home.component.html
@@ -11,4 +11,9 @@
       Afficher les subjects
     </button>
   </p>
+  <p>
+    <button mat-raised-button color="primary" (click)="onDisplayArticles()">
+      Afficher les articles
+    </button>
+  </p>
 </div>
