--- a/front/src/app/mdd/components/article/article-list/article-list.component.html
+++ b/front/src/app/mdd/components/article/article-list/article-list.component.html
@@ -1,1 +1,4 @@
-<p>article-list works!</p>
+<h2>Articles</h2>
+<app-article-list-item
+  *ngFor="let article of articles$ | async"
+></app-article-list-item>
