front: display the articles with template smart dump

--- a/front/src/app/mdd/components/article/article-list/article-list.component.html
+++ b/front/src/app/mdd/components/article/article-list/article-list.component.html
@@ -1,4 +1,5 @@
 <h2>Articles</h2>
 <app-article-list-item
   *ngFor="let article of articles$ | async"
+  [article]="article"
 ></app-article-list-item>
