front: Add material components for writing a comment.

--- a/front/src/app/mdd/components/article/article-list-item/article-list-item.component.html
+++ b/front/src/app/mdd/components/article/article-list-item/article-list-item.component.html
@@ -10,4 +10,7 @@
   <mat-card-content>
     <span class="article-content">{{ article.content }}</span>
   </mat-card-content>
+  <mat-card-actions>
+    <app-comments [comments]="article.comments"></app-comments>
+  </mat-card-actions>
 </mat-card>
