front: emit input event from the child (comment component) to its parent component (article-list-item)

--- a/front/src/app/shared/components/comments/comments.component.html
+++ b/front/src/app/shared/components/comments/comments.component.html
@@ -7,8 +7,7 @@
       [formControl]="commentCtrl"
     />
   </mat-form-field>
-  <button mat-icon-button color="primary" (onClick)="onLeaveComment()">
-    <!-- pour checker les icons: https://fontawesomeicons.com/materialdesign/icons/ -->
+  <button mat-icon-button color="primary" (click)="onLeaveComment()">
     <mat-icon>send</mat-icon>
   </button>
 </div>
