--- a/front/src/app/mdd/components/article/article-list-item/article-list-item.component.html
+++ b/front/src/app/mdd/components/article/article-list-item/article-list-item.component.html
@@ -11,6 +11,9 @@
     <span class="article-content">{{ article.content }}</span>
   </mat-card-content>
   <mat-card-actions>
-    <app-comments [comments]="article.comments"></app-comments>
+    <app-comments
+      [comments]="article.comments"
+      (newComment)="onNewComment($event)"
+    ></app-comments>
   </mat-card-actions>
 </mat-card>
