--- a/front/src/app/mdd/components/article/article-list/article-list.component.html
+++ b/front/src/app/mdd/components/article/article-list/article-list.component.html
@@ -2,4 +2,5 @@
 <app-article-list-item
   *ngFor="let article of articles$ | async"
   [article]="article"
+  (articleCommented)="onArticleCommented($event)"
 ></app-article-list-item>
