front: Receive post response when creating message

--- a/front/src/app/mdd/components/article/article-list/article-list.component.html
+++ b/front/src/app/mdd/components/article/article-list/article-list.component.html
@@ -4,3 +4,11 @@
   [article]="article"
   (articleCommented)="onArticleCommented($event)"
 ></app-article-list-item>
+
+<div *ngIf="message">
+  {{ message }}
+</div>
+
+<div *ngIf="errorMessage" class="error-message">
+  {{ errorMessage }}
+</div>
