--- a/front/src/app/mdd/components/subject/subjectform/subjectform.component.html
+++ b/front/src/app/mdd/components/subject/subjectform/subjectform.component.html
@@ -25,5 +25,5 @@
   {{ errorMessage }}
 </div>
 
-<!-- Ajoute le lien vers le HomeComponent -->
+<!-- Ajoute le lien vers la liste de subjects -->
 <a routerLink="/mdd/subjects">Revenir</a>
