front and back: implement subcriptions/unsubscriptions (button text and http request as per the new subject property isFollowed)

--- a/front/src/app/mdd/components/subject/subjects/subjects.component.html
+++ b/front/src/app/mdd/components/subject/subjects/subjects.component.html
@@ -17,6 +17,12 @@
         >
           Delete
         </button>
+        <button
+          class="subscribe-button"
+          (click)="onSubscribeSubject(subject.id)"
+        >
+          {{ subject.followed ? "Se désabonner" : "S'abonner" }}
+        </button>
       </div>
     </li>
   </ul>
