--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,4 +1,6 @@
-<app-header></app-header>
+
+
+<app-header *ngIf="showHeader"></app-header>
 <div class="main-content">
   <router-outlet></router-outlet>
 </div>
