--- a/front/src/app/app.component.scss
+++ b/front/src/app/app.component.scss
@@ -3,4 +3,8 @@
   padding: 20px;
   max-width: 800px;
   margin: auto;
+
+  display: flex;
+  justify-content: center;
+  align-items: center; /* si vous voulez aussi centrer verticalement */
 }
