--- a/front/src/app/pages/home/home.component.html
+++ b/front/src/app/pages/home/home.component.html
@@ -1,19 +1,9 @@
 <div class="center">
   <img src="/assets/logo_p6.png" alt="logo" />
-  <h1>Welcome to MDD</h1>
-  <p>
-    <button mat-raised-button color="primary" (click)="onDisplayLogin()">
-      Afficher la page de login
-    </button>
-  </p>
-  <p>
-    <button mat-raised-button color="primary" (click)="onDisplaySubjects()">
-      Afficher les subjects
-    </button>
-  </p>
-  <p>
-    <button mat-raised-button color="primary" (click)="onDisplayArticles()">
-      Afficher les articles
-    </button>
-  </p>
+  
+  <!-- Section des boutons -->
+  <div class="button-group">
+    <button mat-raised-button color="primary" (click)="onSignUp()">S'inscrire</button>
+    <button mat-raised-button color="primary" (click)="onSignIn()">Se connecter</button>
+  </div>
 </div>
