--- a/front/src/app/app.component.scss
+++ b/front/src/app/app.component.scss
@@ -6,11 +6,11 @@
   
     display: flex; // Applique le modèle de boîte flexible à l'élément pour aligner et positionner ses enfants de manière plus avancée.
     justify-content: center; // Centre horizontalement les éléments enfants à l'intérieur du conteneur flex.
-    align-items: center; // Centre verticalement les éléments enfants à l'intérieur du conteneur flex.
-  
+    align-items: flex-start; // Commencez à partir du haut de l'espace disponible
+
     height: 100vh; // Définit la hauteur de l'élément à 100% de la hauteur de la fenêtre de visualisation.
     overflow: auto; // Dans le cas où le contenu dépasse la hauteur de l'écran, une barre de défilement apparaîtra.
 
-    background-color: #eae1ae; // Color le fond pour facilité le développement
+    // background-color: #eae1ae; // Color le fond pour facilité le développement
   }
   
