front: custom header toolbar and form

--- a/front/src/app/core/components/header/header.component.html
+++ b/front/src/app/core/components/header/header.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar>
+<mat-toolbar class="custom-toolbar">
   <a routerLink="/">
     <img src="assets/logo_p6.png" alt="Logo" class="logo-image" />
   </a>
