--- a/front/src/app/core/components/header/header.component.scss
+++ b/front/src/app/core/components/header/header.component.scss
@@ -1,5 +1,16 @@
+
+.custom-toolbar {
+  height: 8rem; 
+  background-color: white; // Changer la couleur d'arrière-plan en blanc 
+  color: black; // Changer la couleur du texte en noir 
+  border-bottom: 1px solid black; // 
+
+}
+
+
+
 .logo-image {
-  height: 5rem; /* Vous pouvez ajuster cette valeur */
+  height: 7rem; /* Vous pouvez ajuster cette valeur */
   vertical-align: middle;
   margin-right: 15px;
 }
