--- a/front/src/app/auth/components/login/login.component.html
+++ b/front/src/app/auth/components/login/login.component.html
@@ -1,55 +1,52 @@
 <div>
   <h2>Inscription</h2>
   <form [formGroup]="loginForm" class="login-form">
-    <div
-      style="display: flex; flex-direction: column; gap: 10px; max-width: 50ch"
-    >
-      <div
-        style="
-          display: flex;
-          align-items: center;
-          justify-content: space-between;
-        "
-      class="form-field">
-        <label for="username" style="width: 100px">Nom d'utilisateur</label>
-        <input
-          type="text"
-          id="username"
-          formControlName="username"
-          #usernameInput
-          style="width: 100%"
-        />
-      </div>
-      <div
-        style="
-          display: flex;
-          align-items: center;
-          justify-content: space-between;
-        "
-      class="form-field">
-        <label for="email" style="width: 100px">Adresse e-mail</label>
-        <input
-          type="email"
-          id="email"
-          formControlName="email"
-          style="width: 100%"
-        />
-      </div>
-      <div
-        style="
-          display: flex;
-          align-items: center;
-          justify-content: space-between;
-        "
-      class="form-field">
-        <label for="password" style="width: 100px">Mot de passe</label>
-        <input
-          type="password"
-          id="password"
-          formControlName="password"
-          style="width: 100%"
-        />
-      </div>
+    <div class="login-rows">
+      <p>
+        <mat-form-field appearance="outline">
+          <mat-label>Nom d'utilisateur</mat-label>
+          <input
+            matInput
+            placeholder="Entrez votre nom"
+            type="text"
+            id="username"
+            formControlName="username"
+            #usernameInput
+          />
+        </mat-form-field>
+      </p>
+
+      <!-- <div style="display: flex" class="form-field"> -->
+      <!-- <p>
+          <label for="email">Adresse e-mail</label>
+        </p> -->
+      <p>
+        <mat-form-field appearance="outline">
+          <mat-label>Adresse e-mail</mat-label>
+          <input
+            matInput
+            placeholder="Entrez votre e-mail"
+            type="email"
+            id="email"
+            formControlName="email"
+          />
+        </mat-form-field>
+      </p>
+      <!-- </div> -->
+
+      <p>
+        <mat-form-field appearance="outline">
+          <mat-label>Mot de passe</mat-label>
+          <input
+            matInput
+            placeholder="Entrez votre mot de passe"
+            type="password"
+            id="password"
+            formControlName="password"
+          />
+        </mat-form-field>
+      </p>
+
       <button
         type="submit"
         (click)="createUser()"
