--- a/front/src/app/mdd/components/article/article-list/article-list.component.html
+++ b/front/src/app/mdd/components/article/article-list/article-list.component.html
@@ -1,9 +1,12 @@
 <h2>Articles</h2>
-<app-article-list-item
-  *ngFor="let article of articles$ | async"
-  [article]="article"
-  (articleCommented)="onArticleCommented($event)"
-></app-article-list-item>
+
+<div class="article-grid">
+  <app-article-list-item
+    *ngFor="let article of articles$ | async"
+    [article]="article"
+    (articleCommented)="onArticleCommented($event)"
+  ></app-article-list-item>
+</div>
 
 <div *ngIf="message">
   {{ message }}
