front: fix the overlapping mat cards due to default padding to consider when usring grid. Make the cards clickable.

--- a/front/src/app/mdd/components/article/article-list-item/article-list-item.component.html
+++ b/front/src/app/mdd/components/article/article-list-item/article-list-item.component.html
@@ -1,4 +1,4 @@
-<mat-card>
+<mat-card (click)="showArticleDetails(article)">
   <mat-card-header>
     <mat-card-title>
       <span>{{ article.title | titlecase }}</span>
