--- a/front/src/app/mdd/components/article/article-list-item/article-list-item.component.html
+++ b/front/src/app/mdd/components/article/article-list-item/article-list-item.component.html
@@ -10,10 +10,10 @@
   <mat-card-content>
     <span class="article-content">{{ article.content }}</span>
   </mat-card-content>
-  <mat-card-actions>
+  <!-- <mat-card-actions>
     <app-comments
       [comments]="article.comments"
       (newComment)="onNewComment($event)"
     ></app-comments>
-  </mat-card-actions>
+  </mat-card-actions> -->
 </mat-card>
