back and front: article card should show the author name instead of its id.

--- a/front/src/app/mdd/components/article/article-list-item/article-list-item.component.html
+++ b/front/src/app/mdd/components/article/article-list-item/article-list-item.component.html
@@ -9,7 +9,7 @@
   </mat-card-subtitle>
 
   <mat-card-subtitle class="author">
-    <span>{{ article.userId }}</span>
+    <span>{{ article.userName }}</span>
   </mat-card-subtitle>
   <!-- </mat-card-header> -->
 
