front: mdd header height should not enlarge for small screens

--- a/front/src/app/auth/components/login/login.component.scss
+++ b/front/src/app/auth/components/login/login.component.scss
@@ -9,7 +9,7 @@
   width: 100%;
   max-width: 500px; // Ou la largeur maximale que vous souhaitez pour le formulaire
   margin: 0 auto; // Centrer le conteneur par rapport à l'écran
-  margin-top: 2rem; // Ajoutez une marge en dessous du titre pour l'espacement
+  //margin-top: 2rem; // Ajoutez une marge en dessous du titre pour l'espacement
 }
 
 /* Style pour le formulaire */
