front: Fix the problem of the sidenav that only opened into the header component, simply by useing the mat-sidenav-container at app.component level.

--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,7 +1,17 @@
-<app-header
-  *ngIf="headerType !== HeaderTypeEnum.HomeHeader"
-  [headerType]="headerType"
-></app-header>
-<div class="main-content">
-  <router-outlet></router-outlet>
-</div>
+<mat-sidenav-container class="sidenav-container">
+  <app-header
+    *ngIf="headerType !== HeaderTypeEnum.HomeHeader"
+    [headerType]="headerType"
+    (toggleSidenav)="sidenav.toggle()"
+  ></app-header>
+
+  <mat-sidenav #sidenav position="end">
+    <span>Article</span>
+    <span>Thèmes</span>
+    <mat-icon>account_circle</mat-icon>
+  </mat-sidenav>
+
+  <div class="main-content">
+    <router-outlet></router-outlet>
+  </div>
+</mat-sidenav-container>
